<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:paddingLeft="@dimen/main_padding_left"
    android:paddingRight="@dimen/main_padding_right"
    android:background="@mipmap/background3">

    <EditText
        android:id="@+id/tx_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/login_text"
        android:textColorHint="@color/login_text"
        android:hint="@string/username_hint"
        android:layout_marginTop="156dp"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/tx_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/login_text"
        android:textColorHint="@color/login_text"
        android:hint="@string/password_hint"
        android:layout_below="@id/tx_username"
        android:password="true"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textColor="@color/login_text"
        android:layout_below="@id/tx_password"/>

</RelativeLayout>